# ares-lora

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  firmware.doxygen  mkdocs.yml  requirements.txt  serial-driver-core.doxygen
.github/workflows/: docs.yml  firmware-build.yaml
docs/: ai-usage.md  index.md  license.md
docs/communications/: ares-frame.md  ares-packet.md  index.md
docs/firmware/: build-configs.md  flashing.md  index.md  standards.md
docs/javascript/: doxygen_links.js
docs/serial-driver/: debugging.md  index.md  standards.md
docs/serial-driver/python-api/: dfu.md  serial_driver.md  utils.md
docs/stylesheets/: extra.css
firmware/: CMakeLists.txt  Kconfig  Makefile  VERSION  codechecker.skip  prj.conf  sca-check.bash  sysbuild.conf  usb-legacy.conf  usb.conf
firmware-rx/: CMakeLists.txt
firmware/config/: Kconfig.lora  Kconfig.serial
firmware/include/: led.h  lora.h  lora_frame.h  lora_handlers.h  settings.h
firmware/include/ble/: ble.h
firmware/include/ble/services/: ares_service.h
firmware/include/lora/: lora.h  lora_backend.h  packet.h
firmware/include/serial/: frame.h  serial.h  serial_backend.h  serial_common.h
firmware/overlay/: nrf52840dk_nrf52840.overlay  rak4631_nrf52840.overlay
firmware/src/: lora.c  lora_frame.c  lora_handlers.c  main.c  serial_commands.c  settings.c
firmware/src/ble/: ble.c
firmware/src/ble/services/: ares_service.c
firmware/src/lora/: lora.c  lora_backend.c  packet.c
firmware/src/serial/: frame.c  serial.c  serial_backend.c
firmware/sysbuild/: mcuboot.conf  mcuboot.overlay
serial-driver/: pyproject.toml
serial-driver/core/: .clang-tidy  CMakeLists.txt  Makefile  pyproject.toml  serial-driver-core.doxygen
serial-driver/core/cmake/: AddPythonModule.cmake
serial-driver/core/data_structures/: CMakeLists.txt
serial-driver/core/data_structures/include/ares/: queue.hpp
serial-driver/core/include/ares-lora-serial/: ares_frame.hpp  ares_lora_serial.hpp  spinlock.hpp  task.hpp  util.h  util.hpp  work_q.hpp
serial-driver/core/logging/: CMakeLists.txt
serial-driver/core/logging/include/logging/: log.hpp  logger.hpp
serial-driver/core/logging/include/logging/internal/: logging_utils.h
serial-driver/core/logging/src/: logger.cpp
serial-driver/core/serial/: CMakeLists.txt
serial-driver/core/serial/include/serial/: serial.hpp
serial-driver/core/serial/include/serial/core/: serial_base.hpp  serial_posix.hpp  utils.hpp
serial-driver/core/serial/include/serial/core/C-API/: serial_common.h  serial_posix.h
serial-driver/core/serial/include/serial/tools/: list_ports.hpp
serial-driver/core/serial/include/serial/tools/core/: sys_fs_common.hpp  sys_fs_linux.hpp
serial-driver/core/serial/src/core/: serial_base.cpp  serial_posix.cpp
serial-driver/core/serial/src/core/C-API/: serial_posix.c
serial-driver/core/serial/src/tools/: list_ports.cpp
serial-driver/core/serial/src/tools/core/: sys_fs_common.cpp  sys_fs_linux.cpp
serial-driver/core/src/: core.cpp
serial-driver/core/src/ares_lora_serial/: ares_frame.cpp  ares_lora_serial.cpp  work_q.cpp
serial-driver/core/src/ares_lora_serial_core/: __init__.py
serial-driver/src/ares/: ares_serial.py
serial-driver/src/ares_lora/: __init__.py  dfu.py  errno.py  lserial.py  serial.py  utils.py  version.py
