[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ares-lora"
version = "0.0.0"
authors = [{name = "Tom Schmitz", email = "tschmitz@andrew.cmu.edu"}]
description = "Ares LoRa serial driver"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"
dependencies = [
    "pyserial",
    "ares-lora-core",
]

[project.optional-dependencies]
jax = [ "jax >= 0.4.0" ]
dev = [
    "pre-commit >= 4.0.0",
    "pytest >= 8.0.0",
    "coverage",
    "pytest-cov",
    "pyright >= 1.0.0",
    "ruff >= 0.11.0",
    "mypy",
    "types-PyYAML",
]
docs = [
    "mkdocs == 1.6.*",
    "mkdocs-material == 9.6.*",
    "mkdocstrings-python-xref == 1.16.3",
    "mkdocstrings-python == 1.16.6",
    "griffe == 1.8.0",
    "ruff >= 0.11.0",
]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = [
    "E", "F", "W", "N", "I", "D", "NPY"
]
ignore = [
    "D102",  # Inheriting docstrings is allowed
    "D107",  # Initializer goes in the class docstring
    "D401",  # "Imperative mood" NLP doesn't always make sense
    "D413",  # No blank lines after section is preferred by mkdocstrings
    "N806",  # We do math, so capitalization should be allowed
    "E402",  # Module level imports sometimes need to occur after configuration
    "F722",  # Jaxtyping annotations confuse ruff
    "F821",

    # Must pick one...
    "D213",  # Pick 'multi-line-summary-first-line'.
    "D203",  # Pick `no-blank-line-before-class`.
]

[tool.uv.workspace]
members = [
    "core",
]

[tool.uv.sources]
ares-lora-core = { workspace = true }
